@@ -1,3 +1,10 @@
+2006-01-16  Benjamin Kosnik  <bkoz@redhat.com>
+
+	PR libstdc++/25797
+	* acinclude.m4 (GLIBCXX_CHECK_LINKER_FEATURES): Add -Werror to
+	CFLAGS for --gc-sections test.  Correct compile test.
+	* configure: Regenerated.
+	
 2006-01-15  Paolo Carlini  <pcarlini@suse.de>
 	    Gabriel Dos Reis  <gdr@integrable-solutions.net>
 
